# deeplx-tr

./: .gitignore  .ruff.toml  README.md  Translate.py  a.docx  base64-decode-memo.txt  empty.docx  example.env  llm_tool.py  main.css  marimo_tr.py  model-list.yml  model-list.yml.sample  package.json  pyproject.toml  pyrightconfig.json  run_batch_deeplx_tr.py  streamlit_sstate_cache.json  t1.docx  table.py  tasks.py  temp-a02eaa.docx  �Translate.py  🌐Translate.py
.github/workflows/: routine-tests.yml
.husky/: pre-commit
pages/: 1-Chat.py  1-🧰Toolbox.py  2-ℹ️Info.py
src/deeplx_tr/: __init__.py  __main__.py  __main__.py-  batch_deeplx_tr.py  batch_llm_tr.py  batch_newapi_tr.py  batch_tr.py  check_deeplx.py  color_diff.py  deeplx_client_async.py  deeplx_tr.py  info.py  llm_tr.py  newapi_models.py  newapi_tr.py  newapi_tr.py-  newapi_tr_langchain.py  partial.md  scrape_deeplx_fofa.py  scrape_deeplx_shodan.py  search_net.py  trtext2docx.py
tests/: 2024-06-20.txt  conftest.py  test.txt  test_1.py  test_batch_tr.py  test_deeplx_client.py  test_deeplx_tr.py  test_llm_tr.py  test_newapi_tr.py  test_newapi_tr_langchain.py  test_say.py
